# python-thingset

./: .coverage  .gitignore  README.md  mkdocs.yml  pyproject.toml  thingset
.github/workflows/: test.yml
docs/source/: cli.rst  conf.py  index.rst  installation.rst  modules.rst  python_thingset.backends.rst  python_thingset.encoders.rst  python_thingset.rst  usage.rst
examples/: async_can_sniffer.py  async_udp_sniffer.py  record_fields.example.json
python_thingset/: __init__.py  _protocol.py  async_client.py  backend.py  binary_encoder.py  can_backend.py  cli.py  client.py  id.py  log.py  report.py  response.py  schema.py  serial_backend.py  socket_backend.py  text_encoder.py  thingset.py
python_thingset/backends/: __init__.py  can.py  serial.py  socket.py
python_thingset/encoders/: __init__.py  binary.py  text.py
python_thingset/transport/: __init__.py  async_can.py  async_tcp.py  async_udp.py  can.py  serial.py  tcp.py  transport.py
tests/: test_text_encoder.py
tests/async_can/: test_async_can.py
tests/async_tcp/: test_async_tcp.py
tests/async_udp/: test_async_udp.py
tests/cli/: test_cli_dispatch.py  test_cli_format.py
tests/encoders/binary/: test_enc_bin_exec.py  test_enc_bin_fetch.py  test_enc_bin_get.py  test_enc_bin_get_paths.py  test_enc_bin_update.py
tests/encoders/text/: test_enc_txt_exec.py  test_enc_txt_fetch.py  test_enc_txt_get.py  test_enc_txt_update.py
tests/protocol/: test_parse_report.py  test_try_consume.py  test_wrap_forward.py
tests/schema/: test_discover_schema.py
tests/sync_tcp/: test_sync_tcp.py
tests/transport/: test_receive_loop.py
